bugfix: Make select option text readable on Firefox

--- a/style.css
+++ b/style.css
@@ -64,7 +64,6 @@ body {
 }
 
 input {
-  -webkit-appearance: none;
   display: block;
   float: left;
   width: 50px;
@@ -79,7 +78,6 @@ input {
 }
 
 button {
-  -webkit-appearance: none;
   width: 154px;
   height: 30px;
   margin: 10px 1px;
@@ -94,7 +92,6 @@ button {
 
 #selection {
   -webkit-appearance: none;
-  -moz-appearance: none;
   width: 154px;
   height: 30px;
   padding: 2px;
@@ -103,6 +100,11 @@ button {
   color: #cccccc;
   font-size: 16px;
   text-align: left;
+}
+
+#selection option {
+  color: initial;
+  font-weight: initial;
 }
 
 .select-container {
